--- a/roles/pihole/templates/openvpn/openvpn.conf
+++ b/roles/pihole/templates/openvpn/openvpn.conf
@@ -39,8 +39,8 @@ auth {{ openvpn.conf.auth }}
 comp-lzo no
 
 ### Route Configurations Below
+push "route {{ host.networks.v4.netaddress }} {{ host.networks.v4.netmask }}"
 {% if pihole.use_host_net %}
-push "route {{ host_net.v4.netaddress }} {{ host_net.v4.netmask }}"
 {% else %}
 push "route {{ pihole.networks.v4.netaddress }} {{ pihole.networks.v4.netmask }}"
 {% endif %}
@@ -50,7 +50,7 @@ push "route {{ openvpn.networks.v4.netaddress }} {{ openvpn.networks.v4.netmask 
 
 {% if openvpn.networks.v6.enable %}
 {%   if pihole.use_host_net %}
-push "route-ipv6 {{ host_net.v6.subnet }}"
+push "route-ipv6 {{ host.networks.v6.subnet }}"
 {%   else %}
 push "route-ipv6 {{ pihole.networks.v6.subnet }}"
 {%   endif %}
