--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -5,18 +5,7 @@ root_dirs:
   maintenance: /home/pi/maintenance
   rss: /home/pi/rss
   proxy: /home/pi/proxy
-
-host_net:
-  v4:
-    subnet: 192.168.1.0/24
-    netaddress: 192.168.1.0
-    netmask: 255.255.255.0
-    netmask_short: 24
-    gateway: 192.168.1.1
-  v6:
-    subnet: 2a02:120b:2c06:57d0::/64
-    netmask: 64
-    gateway: 2a02:120b:2c06:57d0:7eb7:33ff:fed0:41a6
+  jupyter: /home/pi/jupyter
 
 discovery_network:
   name: discovery
