--- a/roles/base_system/templates/dhcpcd.conf
+++ b/roles/base_system/templates/dhcpcd.conf
@@ -60,5 +60,5 @@ slaac private
 
 interface {{ host.public_interface }}
     static ip_address={{ host.ipv4 }}
-    static routers={{ host_net.v4.gateway }}
-    static domain_name_servers=127.0.0.1 {{ host_net.v4.gateway }}
+    static routers={{ host.networks.v4.gateway }}
+    static domain_name_servers=127.0.0.1 {{ host.networks.v4.gateway }}
