--- a/roles/pihole/templates/docker-compose.yml
+++ b/roles/pihole/templates/docker-compose.yml
@@ -60,7 +60,6 @@ services:
     network_mode: host
 {% else %}
     networks:
-      {{ discovery_network.name }}:
       {{ openvpn.networks.name }}:
         ipv4_address: {{ openvpn.ipv4 }}
 {%   if openvpn.networks.v6.enable %}
@@ -91,11 +90,13 @@ services:
       - 1.1.1.1
       - 1.0.0.1
     depends_on:
+{% if pihole.use_host_net == false %}
+      - dhcphelper
+{% endif %}
       - openvpn
 {% if pihole.use_host_net == false %}
     {{ dn.map_ports([
       (53, "udp"), (53, "tcp"),
-      (67, "udp"),
       (8282, pihole.web_admin_port)
        ])|indent(width = 4) }}
 {% endif %}
@@ -116,7 +117,7 @@ services:
 {%   endif %}
 {% endif %}
       DNSMASQ_LISTENING: all
-      DNSMASQ_USER: {{ pihole.user }}
+      DNSMASQ_USER: {{ pihole.dnsmasq_user }}
     {{ dv.volumes_section_complete(
       [
         pihole.volumes.main ,
@@ -138,14 +139,33 @@ services:
       {{ unbound.networks.name }}:
 {% endif %}
     cap_add:
+      # Allows FTLDNS binding to TCP/UDP sockets below 1024 (specifically DNS service on port 53)
       - CAP_NET_BIND_SERVICE
+{% if host.supports_v6 %}
+      # use raw and packet sockets (needed for handling DHCPv6 requests, and verifying that an IP is not in use before leasing it)
       - CAP_NET_RAW
+{% endif %}
+      # modify routing tables and other network-related operations (in particular inserting an entry in the neighbor table to answer DHCP requests using unicast packets)
+      - CAP_NET_ADMIN
+      # Needed for DHCP and IPv6 RA
       - NET_ADMIN
     logging:
       driver: "json-file"
       options:
         max-size: "5m"
         max-file: "3"
+
+{% if pihole.use_host_net == false %}
+  # https://docs.pi-hole.net/docker/dhcp/
+  # https://discourse.pi-hole.net/t/dhcp-with-docker-compose-and-bridge-networking/17038
+  dhcphelper:
+    build: ./dhcp-helper
+    network_mode: host
+    command: -s {{ pihole_ipam.ipam.ipv4 }}
+    cap_add:
+      - NET_ADMIN
+    {{ dm.restart_policy() }}
+{% endif %}
 
   unbound:
     container_name: {{ unbound.name }}
