--- a/roles/proxy/vars/main.yml
+++ b/roles/proxy/vars/main.yml
@@ -1,8 +1,41 @@
 traefik:
+  volumes:
+    dynamic_conf:
+      name:         traefik_dynamic_conf
+      local_folder: "{{ root_dirs.proxy }}/traefik-dynamic-conf-data"
+      mount:        /etc/traefik/dynamic_conf
+    self_signed_certs:
+      name:         traefik_self_signed_certs
+      local_folder: "{{ root_dirs.proxy }}/traefik-self-signed-certs"
+      mount:        /self_signed_certs
+
   networks:
     v4:
-      subnet: 172.16.20.0/24
+      subnet:     172.16.20.0/24
       netaddress: 172.16.20.0
-      netmask: 255.255.255.0
-      gateway: 172.16.20.1
+      netmask:    255.255.255.0
+      gateway:    172.16.20.1
     name: "{{ discovery_network.name }}"
+
+authelia:
+  ipv4: "{{ sso_auth.ipv4 }}"
+
+  volumes:
+    config:
+      name:         authelia_config
+      local_folder: "{{ root_dirs.proxy }}/authelia-config"
+      mount:        /etc/authelia
+    data:
+      name:         authelia_data
+      local_folder: "{{ root_dirs.proxy }}/authelia-data"
+      mount:        /usr/app/data
+
+tls:
+  self_signed:
+    cert:         realmar.net.crt
+    private_key:  realmar.net.key
+    cert_request: realmar.net.csr
+
+    cert_dir:         "{{ traefik.volumes.self_signed_certs.local_folder }}/realmar.net.crt"
+    private_key_dir:  "{{ traefik.volumes.self_signed_certs.local_folder }}/realmar.net.key"
+    cert_request_dir: "{{ traefik.volumes.self_signed_certs.local_folder }}/realmar.net.csr"
