--- a/01_deployment_pihole.yml
+++ b/01_deployment_pihole.yml
@@ -13,7 +13,7 @@
     - { role: maintenance, tags: maintenance }
     - { role: fileserver, tags: fileserver }
     - { role: rss, tags: rss }
-    # - { role: jupyter, tags: jupyter }
+    - { role: jupyter, tags: jupyter }
 
   post_tasks:
     # I really don't want to install docker-compose via pip just to make the
