Add discord MusicBot

--- a/01_deployment_pihole.yml
+++ b/01_deployment_pihole.yml
@@ -14,6 +14,7 @@
     - { role: fileserver, tags: fileserver }
     - { role: rss, tags: rss }
     - { role: jupyter, tags: jupyter }
+    - { role: discord, tags: discord }
 
   post_tasks:
     # I really don't want to install docker-compose via pip just to make the
