--- a/roles/proxy/templates/authelia/users_database.yml
+++ b/roles/proxy/templates/authelia/users_database.yml
@@ -1,5 +1,6 @@
 users:
   testuser: ## I have set the password below to 'test' for you
+    displayname: "Test User"
     password: '{CRYPT}$6$rounds=500000$Bui4ldW5hXOI9qwJ$IUHQPCusUKpTs/OrfE9UuGb1Giqaa5OZA.mqIpH.Hh8RGFsEBHViCwQDx6DfkGUiF60pqNubFBugfTvCJIDNw1'
     email: your@email.address
     groups:
