--- a/roles/rss/templates/docker-compose.yml
+++ b/roles/rss/templates/docker-compose.yml
@@ -14,8 +14,7 @@ services:
   rss:
     image: {{ 'freshrss/freshrss:latest' if is_dev else 'freshrss/freshrss:arm' }}
     container_name: freshrss
-    labels:
-      {{ traefik.mount_path("rss", "/rss")|indent(width = 6) }}
+    {{ traefik.declare_labels_mount_path_public("rss", "/rss")|indent(width = 4) }}
     environment:
       CRON_MIN: 4,34
       TZ: {{ timezone }}
