--- a/roles/jupyter/templates/docker-compose.yml
+++ b/roles/jupyter/templates/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - "--MappingKernelManager.cull_idle_timeout={{ jupyter.idle_timeout }}"
     labels:
       {{ traefik.enable(service_name)|indent(width = 6) }}
+      {{ traefik.use_letsencrypt(service_name) }}
       {{ traefik.add_route(dns.public.root, service_name, "/jupyter")|indent(width = 6) }}
       {{ traefik.add_middlewares(service_name, [
         {
