Add personal website

--- a/01_deployment_pihole.yml
+++ b/01_deployment_pihole.yml
@@ -15,6 +15,7 @@
     - { role: rss, tags: rss }
     - { role: jupyter, tags: jupyter }
     - { role: discord, tags: discord }
+    - { role: personal_website, tags: realmar_net }
 
   #post_tasks:
   #  # I really don't want to install docker-compose via pip just to make the
