--- a/roles/proxy/templates/docker-compose.yml
+++ b/roles/proxy/templates/docker-compose.yml
@@ -72,11 +72,11 @@ services:
       {{ tf.enable(service_name)|indent(width = 6) }}
       {{ tf.use_letsencrypt(service_name) }}
       {{ tf.service_port(service_name, 9091) }}
-      - "traefik.http.routers.authelia.rule=Host(`{{ dns_sub_domains.login }}`)"
+      - "traefik.http.routers.{{ service_name }}.rule=Host(`{{ dns_sub_domains.login }}`)"
 
-      - "traefik.http.middlewares.authelia.forwardauth.address=http://{{ sso_auth.ipv4 }}:9091/api/verify?rd=https://{{ dns_sub_domains.login }}/"
-      - "traefik.http.middlewares.authelia.forwardauth.trustForwardHeader=true"
-      - "traefik.http.middlewares.authelia.forwardauth.authResponseHeaders=Remote-User,Remote-Groups,X-Forwarded-User"
+      - "traefik.http.middlewares.{{ service_name }}.forwardauth.address=http://{{ sso_auth.ipv4 }}:9091/api/verify?rd=https://{{ dns_sub_domains.login }}/"
+      - "traefik.http.middlewares.{{ service_name }}.forwardauth.trustForwardHeader=true"
+      - "traefik.http.middlewares.{{ service_name }}.forwardauth.authResponseHeaders=Remote-User,Remote-Groups,X-Forwarded-User"
     networks:
       {{ discovery_network.name }}:
         ipv4_address: {{ sso_auth.ipv4 }}
