--- a/roles/maintenance/templates/netdata.yml
+++ b/roles/maintenance/templates/netdata.yml
@@ -18,7 +18,7 @@ netdata:
     - /sys:/host/sys:ro
     {{ dv.datetime_mapping()|indent(width = 4) }}
 
-  {{ dn.map_ports([ (19999,) ])|indent(width = 2) }}
+{#{{ dn.map_ports([ (19999,) ])|indent(width = 2) }} #}
   {{ traefik.declare_labels_mount_path_internal("netdata", "/netdata")|indent(width = 2) }}
   {{ dn.discovery_network_section()|indent(width = 2) }}
   {{ dm.restart_policy() }}
